@@ -331,20 +331,24 @@ sub PUSH { # this, list
 			$row[0] = $_;
 		}
 	}
-	return 1;
+	return $model->iter_n_children (undef);
 }
 
 sub POP { # this
 	my $model = $_[0]->{model};
 	my $index = $model->iter_n_children-1;
-	$model->remove($model->iter_nth_child(undef, $index))
-		if( $index >= 0 );
+	my $iter = $model->iter_nth_child(undef, $index);
+	my $ret = [ $model->get ($iter) ];
+	$model->remove($iter) if( $index >= 0 );
+	return $ret;
 }
 
 sub SHIFT { # this
 	my $model = $_[0]->{model};
-	$model->remove($model->iter_nth_child(undef, 0))
-		if( $model->iter_n_children );
+	my $iter = $model->iter_nth_child(undef, 0);
+	my $ret = [ $model->get ($iter) ];
+	$model->remove($iter) if( $model->iter_n_children );
+	return $ret;
 }
 
 sub UNSHIFT { # this, list
@@ -361,7 +365,7 @@ sub UNSHIFT { # this, list
 			$row[0] = $_;
 		}
 	}
-	return 1;
+	return $model->iter_n_children (undef);
 }
 
 # note: really, arrays aren't supposed to support the delete operator this
