@@ -1,3 +1,13 @@
+2004/04/05 16:44 (-0500) rwmcfa1
+
+	* pm/SimpleList.pm: pop/shift didn't return the popped/shifted rows.
+	push, unshift didn't reutrn the size of the array.
+
+	* t/GtkSimpleList.t: test out fixes from above
+
+	* xs/GtkHandleBox.xs: added enums apidoc for PositionType and
+	ShadowType
+
 2004/04/05 09:50 (-0400) muppetman
 
 	* xs/GtkTreeStore.xs: patch from Thierry Vignaud corrects indentation
